--- a/foobar/foo.html
+++ b/foobar/foo.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Pages!</title>
+    <title>Example with folder</title>
 </head>
 
 <body>
-    <p>this is my first page</p>
-    <p>https://stabjana.github.io/</p>
+    <p>here you can check how to use url with a folder</p>
+    <p>https://stabjana.github.io/foobar/foo.html</p>
 </body>
 
 </html>
