add changes to 2nd html

--- a/foobar/foo.html
+++ b/foobar/foo.html
@@ -9,7 +9,7 @@
 
 <body>
     <p>here you can check how to use url with a folder</p>
-    <p>https://stabjana.github.io/foobar/foo.html</p>
+    <p>stabjana.github.io/foobar/foo.html</p>
 </body>
 
 </html>
