--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Pages!</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <p>this is my first page</p>
-    <p>https://stabjana.github.io/</p>
+
 </body>
 
 </html>
