--- a/cars/index.html
+++ b/cars/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cars</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="Frame 2.svg" type="image/x-icon">
 </head>
 
 <body>
