add styling and links to index page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <title>What's in this page?</title>
 </head>
 
 <body>
 
+    <section id="welcome">
+        <h1>What's in this page?</h1>
+        <img src="MTkxMzY1Nzg4MTM5MjAyMTQ2.webp" alt="Putziges Tier">
+    </section>
+
+    <div class="card">
+        <h3><a href="https://stabjana.github.io/1_cars/index.html">Cars</a></h3>
+        <h3><a href="https://stabjana.github.io/2_people/index.html">People & Cats</a></h3>
+        <h3><a href="https://stabjana.github.io/3_pancakeMaker/index.html">Pancakes</a></h3>
+    </div>
 </body>
 
 </html>
