--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id="welcome">
         <h1>What's in this page?</h1>
-        <img src="MTkxMzY1Nzg4MTM5MjAyMTQ2.webp" alt="Putziges Tier">
+        <img src="MTkxMzY1Nzg4MTM5MjAyMTQ2.webp" alt="Putziges Quokka">
     </section>
 
     <div class="card">
