add all latest changes from other repository - finished version

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="name-nav">
-            <a href="~/"><img src="Portfolio_pics/Logo_with_font_dark.svg" alt="Logo: Stefanie Jana"></a>
+            <a href="./index.html"><img src="Portfolio_pics/Logo_with_font_dark.svg" alt="Logo: Stefanie Jana"></a>
             <!-- <nav>-->
             <nav class="menu">
                 <button class="mobileMenu">menu</button>
@@ -29,7 +29,7 @@
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#aboutme">About me</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="./Gallery/index.html" target="_blank">Gallery</a></li>
                     <li><a href="#contact">Contact me</a></li>
                     <li><a href="https://www.bc.fi/" target="_blank">BCH</a></li>
                 </ul>
