--- a/Portfolio/Gallery/index.html
+++ b/Portfolio/Gallery/index.html
@@ -21,11 +21,12 @@
 <body>
     <header>
         <div class="name-nav">
-            <a href="~/"><img src="Portfolio_pics/Logo_with_font_dark.svg" alt="Logo: Stefanie Jana"></a>
+            <a href="/index.html"><img src="Portfolio_pics/Logo_with_font_dark.svg" alt="Logo: Stefanie Jana"></a>
             <!-- <nav>-->
             <nav class="menu">
                 <button class="mobileMenu">menu</button>
                 <ul>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="~/#projects">Projects</a></li>
                     <li><a href="~/#aboutme">About me</a></li>
                     <li><a href="~/#skills">Skills</a></li>
@@ -37,8 +38,6 @@
             <!-- </nav>-->
         </div>
     </header>
-
-
 
     <div class="gallH2">
         <h2>Gallery</h2>
