--- a/Portfolio/Gallery/index.html
+++ b/Portfolio/Gallery/index.html
@@ -21,17 +21,18 @@
 <body>
     <header>
         <div class="name-nav">
-            <a href="/index.html"><img src="Portfolio_pics/Logo_with_font_dark.svg" alt="Logo: Stefanie Jana"></a>
+            <a href="/Portfolio/index.html"><img src="Portfolio_pics/Logo_with_font_dark.svg"
+                    alt="Logo: Stefanie Jana"></a>
             <!-- <nav>-->
             <nav class="menu">
                 <button class="mobileMenu">menu</button>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="~/#projects">Projects</a></li>
-                    <li><a href="~/#aboutme">About me</a></li>
-                    <li><a href="~/#skills">Skills</a></li>
-                    <li><a href="~/#">Gallery</a></li>
-                    <li><a href="~/#contact">Contact me</a></li>
+                    <li><a href="/Portfolio/index.html">Home</a></li>
+                    <li><a href="/Portfolio/index.html#projects">Projects</a></li>
+                    <li><a href="/Portfolio/index.html#aboutme">About me</a></li>
+                    <li><a href="/Portfolio/index.html#skills">Skills</a></li>
+                    <li><a href="/Portfolio/index.html#">Gallery</a></li>
+                    <li><a href="/Portfolio/index.html#contact">Contact me</a></li>
                     <li><a href="https://www.bc.fi/" target="_blank">BCH</a></li>
                 </ul>
             </nav>
