add about me text

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -116,12 +116,15 @@
 
         <section class="aboutMe hL2" id="aboutme">
             <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum illum tempore minima quibusdam et sit
-                dolorum, repellat nulla deserunt rem. Corrupti molestias inventore ex nisi minus id velit tenetur
-                libero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita minima ex nemo a quisquam
-                veritatis. Vel, saepe voluptas magni commodi molestias consectetur repellendus, praesentium asperiores,
-                beatae tempore nisi doloremque voluptatibus?<br>
-                <a href="https://youtu.be/H5KGov_Sajs?feature=shared" target="_blank">Favourite Sport</a>
+            <p>Hi, I am Steffi, a former archaeologist and now web development student at Business College Helsinki.
+                I will graduate end of December 2025 and will be available for opportunities. <br>
+                In my free time I love spending time with my family and friends and doing sports like Boffer, Bouldering
+                and Jugger.
+                Jugger is definetly my favourite sport, and we are just forming a team in Helsinki. You can check it out
+                here:
+                <br>
+                <a href="https://youtu.be/H5KGov_Sajs?feature=shared" target="_blank">🦄 Favourite Sport
+                    🦄</a>
             </p>
             <img src="Portfolio_pics/facebook_1728906451417_7251559244804726614.jpg" alt="Steffi">
         </section>
